--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ img.img-thumbnail {
     margin: 32px;
     display: flex;
     flex-direction: column;
+    
     max-width: 40%;
     text-align: justify;
     padding: 64px;
@@ -229,7 +230,7 @@ img.img-thumbnail {
 }
 .carrosel-home{
     padding: auto;
-    max-width: 60%;
+    
     
     margin: 32px;
 }
@@ -241,6 +242,7 @@ img.img-thumbnail {
 .corpo{
     display: flex;
     flex-direction: row;
+    
 }
 
 .nav{
@@ -342,5 +344,9 @@ img.img-thumbnail {
     }
 
     
+}
+
+@media screen and (min-width:1300px){
+    .corpo{margin-left: 10%;}
 }
 
